fixed scrollbar issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -322,6 +322,7 @@ header{
   font-size: 1.20rem;
   color: #424242;
   max-width: 100%;
+
 }
 
 
@@ -330,9 +331,18 @@ header{
   flex-direction: column;
   gap: 20px;
  }
+ .footer{
+  max-width: 100%;
+  
+ }
  .footer div{
-  padding: 10px;
-  font-size: 0.8rem;
+ padding: 10px;
+  font-size: 0.5rem;
+  max-width: 90%;
+  margin: 0 auto;
+ 
+
+  
  }
  /* features */
  #features{
@@ -400,6 +410,13 @@ header{
   .grid-container,#features{
     flex-direction: column;
   }
+  
+  .navbar{
+    flex-direction: column;
+  }
+  .nav-contents{
+    flex-direction: column;
+  }
   #features{
     margin-left: 10px;
   }
@@ -440,6 +457,15 @@ header{
  }
  .sponser-grid img{
   max-width: 90px;
+ }
+ .footer{
+    max-width: 100%;
+  }
+ .footer div{
+  max-width: 90%;
+  margin: 0 auto;
+  font-size: 0.8rem;
+  margin-bottom: 10px;
  }
 
 }
